fixing more overflow

--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -1,12 +1,15 @@
 .main {
-  background: url('../assets/login_bg.jpg') no-repeat center center fixed #000;
-  height: 100vh;
+  background: url('../assets/login_bg.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
+  height: 100%;
   overflow: hidden;
 }
 
 .heading {
-  width: auto;
+  width: 100vw;
   height: 100px;
   text-align: center;
   position: absolute;
